--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -59,9 +59,7 @@
           </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" title="Mes aliments" href="{% url 'foodSearch:watchlist' %}">
-                <img src="{% static 'foodSearch/img/noun_Carrot_29691.png' %}" height="30" width="30" aria-hidden="true">
-              </a>
+              <a class="nav-link" title="Mes aliments" href="{% url 'foodSearch:watchlist' %}"> <i class="fa fa-carott" aria-hidden="true"></i> </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" title="Me déconnecter" href="{% url 'logout' %}"> <i class="fas fa-sign-out-alt fa-2x" aria-hidden="true"></i> </a>
