--- a/pur_beurre_project/foodSearch/templates/foodSearch/detail.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/detail.html
@@ -36,16 +36,7 @@
       </div>
 
       <div class="col-md-5 pt-2 pb-2 ml-auto mr-auto text-center" style="background-color:rgba(52,90,97);">
-        <div class="col-12"><u>INFORMATIONS</u></div><br>
-        <div class="row align-items-center">
-          <div class="col text-right">
-            Marque(s):
-          </div>
-          <div class="col text-left">
-            {{ product.brands }}
-          </div>
-        </div>
-        <br>
+        <div class="col-12"><u>Repères nutritionnels pour 100g</u></div>
         <div class="row align-items-center">
           <div class="col text-right">
             Gras saturés :
@@ -94,8 +85,17 @@
             {{ product.energy_100g }}
           </div>
         </div>
+        <br>
+        <div class="row align-items-center">
+          <div class="col-12">
+            <u>Marque(s)</u>: {{ product.brands }}
+          </div>
+        </div>
       </div>
     </div>
+  </div>
+  <div class="row justify-content-center mt-5">
+      <a href="{{ product.url }}"><button type="button" class="btn btn-dark-green">Voir la fiche d'OpenFoodFacts</button></a>
   </div>
   <div class="row justify-content-center mt-3">
       <a class="btn btn-secondary" href="javascript:history.go(-1)" role="button">Retour</a>
