--- a/pur_beurre_project/foodSearch/templates/foodSearch/userpage.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/userpage.html
@@ -3,15 +3,19 @@
 
 {% block content %}
 
-{% include 'foodSearch/headerpages.html' with title=title %}
+<header class="titlepage">
+  <div class="container h-100">
+    <div class="row h-100 align-items-center justify-content-center text-center">
+      <div class="col-lg-10 align-self-end">
+        <h1 class="text-uppercase text-white font-weight-bold">Ahoy<br>{{title}} !</h1>
+      </div>
+    </div>
+  </div>
+</header>
 
-<section style="background-color:#de9440;" class="page-section text-white mb-5 id="history">
-  <div class="col-lg-8 mx-auto">
-    <p>Nom utilisateur : {{ username }}</p>
-    <p>Adresse mail : {{ email }}</p>
-    <br>
-    <p><u><a class="text-white" href="{% url 'foodSearch:watchlist' %}">Modifier mon mot de passe</a></u></p>
-    <p><u><a class="text-white" href="{% url 'foodSearch:watchlist' %}">Voir mes Aliments</a></u></p>
+<section style="background-color:#de9440;" class="page-section"id="history">
+  <div class="col-12 text-center">
+    <p>Adresse mail : <span style="background-color:white; color:black;">{{ email }}</span></p>
   </div>
 </section>
 
