--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -76,7 +76,7 @@
   <footer class="bg-light py-5">
     <div class="row">
       <div class="col-lg-6 text-center small text-muted"><a class="d-block" href="#">Mentions légales</a></div>
-      <div class="col-lg-6 text-center small text-muted"><a class="d-block" href="#">Contacts</a></div>
+      <div class="col-lg-6 text-center small text-muted"><a class="d-block" href="{% url 'foodSearch:index' %}#contact">Contacts</a></div>
     </div>
   </footer>
 
