pagination ok + visuel legals ok

--- a/pur_beurre_project/foodSearch/static/foodSearch/css/creative.css
+++ b/pur_beurre_project/foodSearch/static/foodSearch/css/creative.css
@@ -2818,7 +2818,7 @@ fieldset:disabled a.btn {
 
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.7rem;
   line-height: 1.5;
   border-radius: 0.2rem;
 }
@@ -9778,4 +9778,8 @@ header.masthead h1 {
   font-size: 28px;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+.pagination{
+  font-size: 0.7rem !important;
 }
