--- a/pur_beurre_project/foodSearch/templates/foodSearch/legals.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/legals.html
@@ -26,6 +26,7 @@
         <p>Photo de Fond : <a href="https://unsplash.com/photos/eqsEZNCm4-c">Olenka Kotyk
 </a></p>
         <p>Template Bootstrap: <a href="https://startbootstrap.com/template-overviews/creative/">Lien</a></p>
+        <p>Images Remy&Colette : <a href="https://www.disneypixar.fr/films/115-ratatouille">Film Ratatouille</a></p>
     </div>
   </div>
 
