--- a/pur_beurre_project/foodSearch/templates/foodSearch/headerpages.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/headerpages.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <header class="titlepage">
   <div class="container h-100">
     <div class="row h-100 align-items-center justify-content-center text-center">
