--- a/pur_beurre_project/foodSearch/templates/foodSearch/search.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/search.html
@@ -31,19 +31,19 @@
               <a href="/results/{{ product.id }}/" class="text-white">Chercher un substitut</a>
 
               {% if product.nutrition_grade_fr == 'a' %}
-                <span style="background-color: #5bac09;" class="grade">{{ product.nutrition_grade_fr }}</span>
+                <span style="background-color: #5bac09;" class="grade upimg">{{ product.nutrition_grade_fr }}</span>
               {% endif %}
               {% if product.nutrition_grade_fr == 'b' %}
-                <span style="background-color: #0977ac;" class="grade">{{ product.nutrition_grade_fr }}</span>
+                <span style="background-color: #0977ac;" class="grade upimg">{{ product.nutrition_grade_fr }}</span>
               {% endif %}
               {% if product.nutrition_grade_fr == 'c' %}
-                <span style="background-color: #f7e80b;" class="grade">{{ product.nutrition_grade_fr }}</span>
+                <span style="background-color: #f7e80b;" class="grade upimg">{{ product.nutrition_grade_fr }}</span>
               {% endif %}
               {% if product.nutrition_grade_fr == 'd' %}
-                <span style="background-color: #f7a60b;" class="grade">{{ product.nutrition_grade_fr }}</span>
+                <span style="background-color: #f7a60b;" class="grade upimg">{{ product.nutrition_grade_fr }}</span>
               {% endif %}
               {% if product.nutrition_grade_fr == 'e' %}
-                <span style="background-color: #f00000;" class="grade">{{ product.nutrition_grade_fr }}</span>
+                <span style="background-color: #f00000;" class="grade upimg">{{ product.nutrition_grade_fr }}</span>
               {% endif %}
           </div>
           {% if forloop.counter|divisibleby:3 %}<div class="clearfix"></div>{% endif %}
