--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -54,7 +54,10 @@
             {% if user.is_authenticated %}
               <a class="nav-link" title="Mon compte" href="{% url 'foodSearch:userpage' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
             {% else %}
-              <a class="nav-link" title="Me connecter" href="{% url 'login' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
+              <a class="nav-link" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
+                <i class="fa fa-user fa-2x"></i>
+              </a>
+
             {% endif %}
           </li>
           {% if user.is_authenticated %}
