--- a/pur_beurre_project/foodSearch/templates/foodSearch/headerpages.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/headerpages.html
@@ -2,6 +2,7 @@
 
 <header class="titlepage">
   <div class="container h-100">
+    {% include 'registration/login.html' %}
     <div class="row h-100 align-items-center justify-content-center text-center">
       <div class="col-lg-10 align-self-end">
         <h1 class="text-uppercase text-white font-weight-bold">{{title}}</h1>
