--- a/pur_beurre_project/foodSearch/templates/foodSearch/index.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/index.html
@@ -6,6 +6,7 @@
   <!-- Masthead -->
   <header class="masthead">
     <div class="container h-100">
+      {% include 'registration/login.html' %}
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
           <h1 class="text-uppercase text-white font-weight-bold">Du gras, oui,<br> mais de qualité!</h1>
