--- a/pur_beurre_project/foodSearch/templates/registration/login.html
+++ b/pur_beurre_project/foodSearch/templates/registration/login.html
@@ -1,47 +1,45 @@
-{% extends 'foodSearch/base.html' %}
+
 {% load static %}
 
-{% block content %}
 
-<header class="titlepage">
-  <div class="container h-100">
-    <div class="row h-100 align-items-center justify-content-center text-center">
-      <div class="col-lg-10 align-self-end">
-        <h1 class="text-uppercase text-white font-weight-bold">Se connecter</h1>
+<div id="modalLogIn" class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Se connecter</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="md-form mb-5">
+          <form method="post" action="{% url 'foodSearch:login' %}">
+            {% if form.errors %}
+            <p>Saisie incorrecte</p>
+            {% endif %}
+
+            {% csrf_token %}
+            <div class="md-form mb-3">
+              <label data-error="wrong" data-success="right" for="defaultForm-email">Nom d'utilisateur</label>
+              <input id="mail" type="email" id="defaultForm-email" class="form-control validate" value="{{ form.username }}">
+            </div>
+            <div class="md-form mb-3">
+              <i class="fas fa-lock prefix grey-text"></i>
+              <label data-error="wrong" data-success="right" for="defaultForm-pass">Mot de passe</label>
+              <input type="password" id="defaultForm-pass" class="form-control validate" value="{{ form.password }}">
+            </div>
+            <div class="md-form mb-3 text-center">
+              <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="modal-footer d-flex">
+        <p>
+          Vous n'avez toujours pas de compte Pur Beurre? Pas de panique, créez-en un :
+        </p>
+        <a class="btn btn-secondary" href="{% url 'foodSearch:register' %}" class="btn">Créer un compte</a>
       </div>
     </div>
   </div>
-</header>
-
-<section style="background-color:#de9440;" class="page-section text-white" id="history">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 mx-auto text-center">
-          {% if form.errors %}
-          <p>Saisie incorrecte</p>
-          {% endif %}
-
-          {% if next %}
-          <p>Accès refusé.</p>
-          {% endif %}
-
-          <form method="post" action="{% url 'login' %}">
-            {% csrf_token %}
-
-            <p>Nom d'utilisateur: {{ form.username }}</p>
-            <p>Mot de passe: {{ form.password }}</p>
-
-            <p><input class="btn btn-primary" type="submit" value="Se connecter"></p>
-            <input type="hidden" name="text" value="{{ next }}">
-          </form>
-          <p>
-            Vous n'avez toujours pas de compte Pur Beurre? <br>
-            pas de panique, créez-en un :
-          </p>
-          <a class="btn btn-secondary" href="{% url 'foodSearch:register' %}" class="btn">Créer un compte</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-{% endblock %}
+</div>
