--- a/pur_beurre_project/foodSearch/templates/registration/login.html
+++ b/pur_beurre_project/foodSearch/templates/registration/login.html
@@ -13,15 +13,11 @@
       </div>
       <div class="modal-body">
         <div class="md-form mb-5">
-          <form method="post" action="{% url 'foodSearch:login' %}">
-            {% if form.errors %}
-            <p>Saisie incorrecte</p>
-            {% endif %}
-
+          <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
             <div class="md-form mb-3">
-              <label data-error="wrong" data-success="right" for="defaultForm-email">Nom d'utilisateur</label>
-              <input id="mail" type="email" id="defaultForm-email" class="form-control validate" value="{{ form.username }}">
+              <label data-error="wrong" data-success="right" for="defaultForm-text">Nom d'utilisateur</label>
+              <input id="mail" type="text" id="defaultForm-email" class="form-control validate" value="{{ form.username }}">
             </div>
             <div class="md-form mb-3">
               <i class="fas fa-lock prefix grey-text"></i>
