--- a/pur_beurre_project/foodSearch/templates/foodSearch/base.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/base.html
@@ -54,7 +54,7 @@
             {% if user.is_authenticated %}
               <a class="nav-link" title="Mon compte" href="{% url 'foodSearch:userpage' %}"> <i class="fa fa-user fa-2x" aria-hidden="true"></i> </a>
             {% else %}
-              <a class="nav-link" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
+              <a href="" id="connect" class="nav-link" title="Me connecter" data-toggle="modal" data-target="#modalLogIn">
                 <i class="fa fa-user fa-2x"></i>
               </a>
 
@@ -74,6 +74,8 @@
   </nav>
 
   {% block content %}{% endblock %}
+
+  {% include 'registration/login.html' %}
 
   <!-- Footer -->
   <footer class="bg-light py-5">
